--- a/package.json
+++ b/package.json
@@ -8,9 +8,13 @@
     "start": "next start"
   },
   "dependencies": {
+    "axios": "^0.19.2",
+    "firebase-admin": "^8.12.1",
     "gray-matter": "^4.0.2",
     "next": "9.3.5",
+    "node-fetch": "^2.6.0",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "swr": "^0.2.2"
   }
 }
